--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-    padding: 10px 300px;
+    padding: 10px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,7 +45,7 @@ body {
 }
 
 .hero-content {
-    padding: 100px 300px;
+    padding: 100px 100px;
     display: flex;
     justify-content: space-between;
 }
@@ -86,6 +86,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .information {
@@ -134,6 +135,7 @@ body {
     font-style: italic;
     font-weight: 300;
     width: 800px;
+    margin-bottom: 50px;
 }
 
 .quote-author {
